[package]
name = "wayland-clipboard-poll"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
env_logger = "0.11.11"
log = "0.4.33"
rustix = { version = "1.1.4", features = ["fs", "pipe"] }
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.13", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
