[package]
name = "wl-data-control-protocol-evt"
version = "0.1.0"
edition = "2024"
description = "Implementation of ext-data-control Wayland protocol, pollable and event based"

[dependencies]
anyhow = "1"
crossbeam-queue = "0.3.12"
env_logger = "0.11"
log = "0.4"
rustix = { version = "1.1", features = ["fs", "pipe"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
